Páginas welcome, calculadora
Co-authored-by: Rodolfo Brian <rodolfo_bdf@hotmail.com>
Co-authored-by: David Elias  <jogadorbr602@gmail.com>

--- a/dataprev-app/src/Pages/pages.css
+++ b/dataprev-app/src/Pages/pages.css
@@ -1,3 +1,5 @@
+@import url('https://fonts.googleapis.com/css2?family=Roboto:wght@100;400&display=swap');
+
 *{
     margin: 0;
     padding: 0;
@@ -37,6 +39,7 @@ a {
     vertical-align: top;
     color:#24c123;  
     text-decoration: none;
+    cursor: pointer;
 }
 
 a:first-of-type{
@@ -66,6 +69,15 @@ span.criar {
     flex-direction: column;
     justify-content: start;
     align-items: center;
+    margin: 0;
+}
+
+#titulo-registre{
+    font-style: normal;
+    font-weight: bold;
+    font-size: 40px;
+    text-align: center;
+    color: #1EAC1D;
     margin: 10% 0;
 }
 
@@ -78,7 +90,43 @@ span.criar {
    padding: 0;
 }
 
-.botao-entrar{
+#botoes-steps{
+    margin: 10% 0 0 7%;
+    padding: 0;
+
+}
+
+#botao-proximo, #botao-voltar{
+    font-family: Roboto;
+    font-style: normal;
+    font-weight: bold;
+    font-size: 15px;
+    line-height: 21px;
+    text-align: right;
+}
+
+#botao-proximo{
+    color: #45C590;
+}
+
+#botao-voltar{
+    color: #8B7D7D;
+}
+
+#botão-pular {
+    color: rgb(156, 151, 151);
+    align-self: center;
+    padding: 0;
+    margin: 3% 0 0 38%;
+}
+
+#container-welcome{
+    display: flex;
+    flex-direction: column;
+    justify-content: space-between;
+    align-items: center;
+}
+.botao-entrar, .botao-cadastro{
     background-color:#1EAC1D;
     color:white;
     border: none;
@@ -92,6 +140,10 @@ span.criar {
     border-radius: 20px;
 }
 
+.botao-cadastro{
+    margin-top: 10%;
+}
+
 .botao-entrar:hover{
     background-color:#095c09;
 }
@@ -99,11 +151,17 @@ span.criar {
 .logo{
     margin:0;
     padding: 0;
+    margin-top: 10%;
     width: 172px;
 }
 
-.MuiMobileStepper-dot{
-    font-size: 50px;
-}
-
 .todos { align-items: center; margin: 0 auto; }
+
+.tela-welcome{
+    display: flex;
+    flex-direction: column;
+    justify-content: space-around;
+    height: 70vh;
+    align-items: center;
+    padding: 3%;
+}
