--- a/dataprev-app/src/Pages/pages.css
+++ b/dataprev-app/src/Pages/pages.css
@@ -1,4 +1,4 @@
-@import url('https://fonts.googleapis.com/css2?family=Roboto:wght@100;400&display=swap');
+@import url('https://fonts.googleapis.com/css2?family=Roboto:wght@100;400;500&display=swap');
 
 *{
     margin: 0;
@@ -6,7 +6,7 @@
     font-family: "Roboto", Arial, Helvetica, sans-serif;
 }
 
-p {
+#text-welcome {
     font-family: "Roboto";
     font-style: normal;
     font-weight: normal;
@@ -165,3 +165,305 @@ span.criar {
     align-items: center;
     padding: 3%;
 }
+
+/* User */ 
+
+#profile {
+    background: linear-gradient(62.34deg, #45C690 53.83%, #69F366 100%);
+    width: 100%;
+    height: 440px;
+    
+}
+
+#avatar_user {
+  align-items: center;
+  padding: 10px;
+  width: 50%;
+  margin: auto;
+  position: absolute;
+  right: 47px;
+  
+}
+
+#profile_name {
+    color: #fff;
+    text-align: center;
+    font-family: 'Roboto';
+    font-size: 18px;
+    font-weight: Medium;
+    position: relative;
+    top: 98px;
+    
+}
+#profile_email {
+    color: #fff;
+    text-align: center;
+    font-family: 'Roboto';
+    font-size: 14px;
+    font-weight: Medium;
+    padding-top: 8px;
+    position: relative;
+    top: 94px;
+}
+
+#board_gaming {
+position: absolute;
+width: 310px;
+height: 50px;
+left: 19px;
+top: 179px;
+
+background: #279F6D;
+border-radius: 50px;
+}
+
+/*   */
+
+#categorize-1 {
+font-family: Roboto;
+font-style: normal;
+font-weight: 500;
+font-size: 12px;
+line-height: 14px;
+color: #fff;
+/* identical to box height */
+
+text-align: center;
+}
+
+#categorize-1 {
+    font-family: Roboto;
+    font-style: normal;
+    font-weight: 500;
+    font-size: 12px;
+    line-height: 14px;
+    color: #fff;
+    /* identical to box height */
+    position: absolute;
+    top: 8px;
+    right:  204px;
+    text-align: center;
+    }
+
+#categorize-2 {
+    font-family: Roboto;
+    font-style: normal;
+    font-weight: 500;
+    font-size: 12px;
+    line-height: 14px;
+    color: #fff;     
+    text-align: center;
+    position: absolute;
+    top: 8px;
+    left: 196px;
+}
+    
+
+#ranked_position {
+font-family: Roboto;
+font-style: normal;
+font-weight: 500;
+font-size: 18px;
+line-height: 21px;
+/* identical to box height */
+position: relative;
+right: 73px;
+color: #FFFFFF;
+}
+
+#pontos_position {
+    font-family: Roboto;
+    font-style: normal;
+    font-weight: 500;
+    font-size: 18px;
+    line-height: 21px;
+    /* identical to box height */
+    position: absolute;
+    color: #FFFFFF;
+    right: 80px;
+    top: 0px
+
+    }
+    
+
+
+
+#icon-trofeu {
+    position: absolute;
+    top: 10px;
+    right: 145px;
+}
+
+
+
+#cource_status {
+    position: relative;
+    background-color: #fff;
+    width: 266px;
+    height: 133px;
+    left: 48px;
+    top: 154px;
+    border-radius: 20px;
+    align-items: center;
+    
+}
+
+#cource_title {
+    color: #000;
+    padding-top: 25px;
+    font-size: 18px;
+}
+
+#cource_subtitle {
+    color: #AFB3B6;
+    font-size: 14px;
+    position: relative;
+    top: 2px;
+    margin-top: 3px;
+} 
+
+#button_cource {
+    background-color: #1EAC1D;
+    border: none;
+    border-radius: 20px;
+    width: 190px;
+    height: 30px;
+    color: #fff;
+    text-transform: uppercase;
+    font-size: 12px;
+    left:  40px;
+    position: relative;
+    margin-top: 33px;
+    text-align: center;
+}
+
+#progress-bar {
+position: absolute;
+margin-top: 4px;
+width: 227px;
+height: 14px;
+left: 22px;
+top: 66px;
+background-color: rgba(0, 0, 0, 0.12);
+border-radius: 60px;
+}
+
+#progress {
+position: absolute;
+width: 107px;
+height: 14px;
+border-radius: 60px;
+/* Gradient2.0 */
+
+
+position: absolute;
+
+background: linear-gradient(11.67deg, #45C690 53.83%, #69F366 100%);
+border-radius: 60px;
+}
+
+
+/* SideMenu */
+
+#options {
+
+    width: 359px;
+    height: 155px;
+
+background: #FFFFFF;
+border-radius: 15px;
+position: absolute;
+top: 415px;
+
+}
+ 
+#options h1 {
+font-family: Roboto;
+font-style: normal;
+font-weight: 500;
+font-size: 12px;
+line-height: 14px;
+
+/* Black / 38% */
+
+color: rgba(0, 0, 0, 0.38);
+}
+
+#avatar {
+    position: absolute;
+    
+
+}
+
+/* Preferencias */
+
+#preference-header {
+    background: linear-gradient(62.34deg, #45C690 53.83%, #69F366 100%);
+    width: 374px;
+    height: 123px;
+}
+
+#preference-header h1 {
+    color: #fff;
+    margin: 0px;
+
+    font-family: Roboto;
+    font-style: normal;
+    font-weight: bold;
+    font-size: 18px;
+    line-height: 21px;
+    text-transform: uppercase;
+    text-align: center;
+    position: absolute;
+    top: 40px;
+    left: 90px;
+}
+
+#input_seach {
+    background: rgba(0, 0, 0, 0.38);
+    border: 1px solid #494949;
+    box-sizing: border-box;
+    width: 300px;
+    height: 27px;
+    left: 32px;
+    top: 78px;
+    position: absolute;
+    padding-left: 10px;
+}
+
+#input_seach:placeholde {
+    color: #fff;
+}
+
+#input_seach::-webkit-input-placeholder { /* Chrome/Opera/Safari */
+    color: #fff;
+  }
+
+
+
+
+  li {
+      list-style-type: none;
+  }
+
+  li {
+      color: #252222;
+      margin-left: 10px;
+      margin-top: 10px;
+      font-family: Roboto;
+    font-style: normal;
+    font-weight: 500;
+    font-size: 14px;
+    line-height: 13px;
+    margin-bottom: 15px solid #252222;
+    border-width:1px 0;
+/* identical to box height */
+  }
+
+#icon_search {
+    position: absolute;
+    top: 82px;
+    left: 275px;
+    color: #fff;
+}
+
