--- a/dataprev-app/src/Pages/calculadora.css
+++ b/dataprev-app/src/Pages/calculadora.css
@@ -1,19 +1,201 @@
-.inputNumber{ 
+#tela-toda {
+position: relative;
+width: 360px;
+height: 640px;
+background: #FFFFFF;
+align-items: center;
+}
 
-    max-width: 6rem;
-    font-size: 30px;
+
+.saldo {
+    color: #656fd3;
+}
+
+
+.txt1 {
+    /* Solicitar auxílio de um especialista */
+
+
+    position: absolute;
+    width: 75px;
+    height: 13px;
+    left: 251px;
+    top: 167px;
+
+    font-family: Roboto;
+    font-style: normal;
+    font-weight: normal;
+    font-size: 8px;
+    line-height: 9px;
     text-align: center;
-   
-    box-sizing: inherit;
-}
-* bo
-.titulo-register {
 
+    /* Black / 60% */
+
+    color: rgba(0, 0, 0, 0.6);
 }
 
-label {
-    cursor: pointer;
+.txt2 {
+    /* Consultar sua Carteira Digital */
+
+
+    position: absolute;
+    width: 63px;
+    height: 13px;
+    left: 256px;
+    top: 205px;
+
+    font-family: Roboto;
+    font-style: normal;
+    font-weight: normal;
+    font-size: 8px;
+    line-height: 9px;
+    text-align: center;
+
+    /* Black / 60% */
+
+    color: rgba(0, 0, 0, 0.6);
+}
+
+input {
+    /* Rectangle 276 */
+
+
+    position: absolute;
+    width: 78px;
+    height: 18px;
+    left: 124px;
+    top: 358px;
+
+    background: #F9F7F7;
+    border: 1px solid #DADADA;
+    box-sizing: border-box;
+    border-radius: 20px;
+}
+
+.saldo-invest {
+    /* Saldo investido */
+    position: absolute;
+    width: 82px;
+    height: 15px;
+    left: 64px;
+    top: 170px;
+
+    font-family: Roboto;
+    font-style: normal;
+    font-weight: normal;
+    font-size: 12px;
+    line-height: 14px;
+    text-align: center;
+
     color: #000000;
-    font-size: 15px;
 
+}
+
+.inv {
+    position: absolute;
+    width: 98px;
+    height: 21px;
+    left: 37px;
+    top: 188px;
+    font-family: Roboto;
+    font-style: normal;
+    font-weight: bold;
+    font-size: 18px;
+    line-height: 21px;
+    text-align: center;
+    color: #000000;
+}
+
+.saldo-atualizado {
+    /* Saldo atualizado as 11:11:02 PM */
+
+
+    position: absolute;
+    width: 133px;
+    height: 13px;
+    left: 38px;
+    top: 211px;
+
+    font-family: Roboto;
+    font-style: normal;
+    font-weight: normal;
+    font-size: 9px;
+    line-height: 11px;
+    text-align: center;
+
+    /* Black / 60% */
+
+    color: rgba(0, 0, 0, 0.6);
+}
+
+.box1 {
+    /* Solicitar auxílio de um especialista */
+
+
+    position: absolute;
+    width: 75px;
+    height: 13px;
+    left: 251px;
+    top: 167px;
+
+    font-family: Roboto;
+    font-style: normal;
+    font-weight: normal;
+    font-size: 8px;
+    line-height: 9px;
+    text-align: center;
+
+    /* Black / 60% */
+
+    color: rgba(0, 0, 0, 0.6);
+}
+
+.box2 {
+
+    /* Rectangle 277 */
+    position: absolute;
+    width: 78px;
+    height: 18px;
+    left: 252px;
+    top: 358px;
+
+    background: #F9F7F7;
+    border: 1px solid #DADADA;
+    box-sizing: border-box;
+    border-radius: 20px;
+}
+
+.head1 {
+    position: absolute;
+    width: 195px;
+    height: 15px;
+    left: 87px;
+    top: 260px;
+    
+    font-family: Roboto;
+    font-style: normal;
+    font-weight: 900;
+    font-size: 16px;
+    line-height: 19px;
+    
+    color: #1EAC1D;
+}
+
+.txt3 {
+    position: absolute;
+    width: 285px;
+    height: 13px;
+    left: 38px;
+    top: 280px;
+
+    font-family: Roboto;
+    font-style: normal;
+    font-weight: normal;
+    font-size: 9px;
+    line-height: 11px;
+    text-align: center;
+
+    /* Black / 60% */
+
+    color: rgba(0, 0, 0, 0.6);
 }
