--- a/dataprev-app/src/components/components.css
+++ b/dataprev-app/src/components/components.css
@@ -42,7 +42,37 @@
     display: flex;
     justify-content: space-around;
     align-items: center;
+    max-width: 100%;
 }
+
+#container-amigos{
+    height: 5vh;
+    width: 90vw;
+    border-bottom: 1px solid #6F5A5A;
+    display: flex;
+    justify-content: center;
+    align-items: center;
+}
+#amigos{
+    display: grid;
+    grid-template-columns: 2fr 3fr 2fr 1fr;
+    grid-template-rows: 1fr 1fr;
+    justify-items: center;
+    align-items: center;
+    width: 100%;
+    margin-bottom: 40px;
+}
+
+#menu-rodape{
+    display: flex;
+    flex-direction: column;
+    justify-content: flex-end;
+    height: 100%;
+    align-items: center;
+    margin:0;
+    padding: 0;
+}
+
 #informacoes{
     height: 70%;
     width: 100%;
@@ -80,12 +110,68 @@
     align-items: center;
 }
 
+#imagem-amigo{
+    grid-area: 1/1/3/2;
+    width: 50px;
+    height: 50px;
+}
+
+#nome-amigo {
+    grid-area: 1/2/2/3;
+    font-family: Roboto;
+    font-style: normal;
+    font-weight: bold;
+    font-size: 12px;
+    line-height: 14px;
+    text-align: center;
+    color: #000000;
+}
+
+#num-amigo {
+    grid-area: 2/2/3/3;
+    font-family: Roboto;
+    font-style: normal;
+    font-weight: 900;
+    font-size: 12px;
+    line-height: 14px;
+    text-align: center;
+    color: #292323;
+
+}
+
+#ponto-amigo {
+    grid-area: 1/3/3/4;
+    font-family: Roboto;
+    font-style: normal;
+    font-weight: 500;
+    font-size: 18px;
+    line-height: 21px;
+    text-align: center;
+    color: #282727;
+}
+
+#trofeu-amigos{
+    grid-area: 1/4/3/5;
+    width: 19px;
+    height: 21px;
+}
+
 #tela-componente{
     display: flex;
     width: 100%;
-    height:80%;
-
+    height:70%;
     margin-top: 32%;
+}
+
+#tela-amigos {
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+    justify-content: space-between;
+    width: 100%;
+    height: 40%;
+    width: 100vw;
+    margin-top: 50%;
 }
 
 .teste {
@@ -100,6 +186,74 @@
     line-height: 14px;
     line-height: 100%;
     text-align: center;
+}
 
+.imagem-atalhos{
+    width: 20px;
+    margin:0;
+    padding: 0;
+    align-self: center;
+    align-items: center;
+    padding-left: 13px;
+}
+
+.imagem-atalhos:first-of-type{
+    width: 40px;
+}
+
+.nome-atalhos{
+    font-family: Roboto;
+    font-style: normal;
+    font-weight: bold;
+    font-size: 11px;
+    line-height: 13px;
+    text-align: center;
+    margin:0;
+    padding: 0;
+    color: #000000;
+    margin-left: -5px;
+    border-left: 1px solid black;
+}
+
+#Task_Title  {
+    font-family: Roboto;
+    font-style: normal;
+    font-weight: bold;
+    font-size: 16px;
+    line-height: 19px;
+    color: #000000 !important;
+    position: absolute;
+    top: 200px;
+    left: 70px;
+}
+
+#Task_Subtitle {
+    font-family: Roboto;
+    font-style: normal;
+    font-weight: 500;
+    font-size: 12px;
+    line-height: 14px;
+    text-align: center;
+    position: absolute;
+    top: 250px;
+    left: 70px;
+}
+
+
+#Points {
+    background: #F9F7F7;
+    border: 1px solid #DADADA;
+    box-sizing: border-box;
+    border-radius: 20px;
+}
+
+#activite {
 
 }
+
+#Logo {
+    position: absolute;
+    top: 113px;
+    right: 150px;
+}
+
