--- a/dataprev-app/src/components/components.css
+++ b/dataprev-app/src/components/components.css
@@ -23,6 +23,15 @@
     background: linear-gradient(31deg, #45C690 53.83%, #69F366 100%);
 }
 
+#cabecalho-cursos{
+    position: absolute;
+    width: 360px;
+    height: 117px;
+    background: linear-gradient(31deg, #45C690 53.83%, #69F366 100%);
+    padding-top: 20px;
+}
+
+
 #informacoes, #conquistas, #perfil{
     display: flex;
     justify-content: space-between;
@@ -237,8 +246,21 @@
     position: absolute;
     top: 250px;
     left: 70px;
+    color: #979797;
 }
 
+
+#Meta_Progress {
+width: 222px;
+height: 17px;
+left: 84px;
+top: 189px;
+position: absolute;
+top: 285px;
+left: 70px;
+background: rgba(0, 0, 0, 0.12);
+border-radius: 60px;
+}
 
 #Points {
     background: #F9F7F7;
@@ -247,13 +269,51 @@
     border-radius: 20px;
 }
 
-#activite {
+#activite {  
+font-family: Roboto;
+font-style: normal;
+font-weight: 500;
+font-size: 12px;
+line-height: 14px;
+text-align: center;
+position: absolute;
+top: 286px;
+left: 300px;
 
+color: #979797;
 }
+
+#Points {
+background: #F9F7F7;
+border: 1px solid #DADADA;
+box-sizing: border-box;
+border-radius: 20px;
+position: absolute;
+top: 10px;
+left: 10px;
+}
+
+#Points h1 {
+    color: red;
+}
+
 
 #Logo {
     position: absolute;
     top: 113px;
     right: 150px;
+}
+
+#Task_Treetitle {
+    font-family: Roboto;
+    font-style: normal;
+    font-weight: 500;
+    font-size: 12px;
+    line-height: 14px;
+    text-align: center;
+    position: absolute;
+    top: 265px;
+    left: 70px;
+    color: #979797;
 }
 
