--- a/dataprev-app/src/components/components.css
+++ b/dataprev-app/src/components/components.css
@@ -312,8 +312,142 @@ left: 10px;
     line-height: 14px;
     text-align: center;
     position: absolute;
-    top: 265px;
+    top:   237px;
     left: 70px;
     color: #979797;
+}
+
+
+#Points-1 {
+    background: #F9F7F7;
+    border: 1px solid #DADADA;
+    box-sizing: border-box;
+    border-radius: 20px;
+    position: absolute;
+    top: 10px;
+    left: 10px;
+    }
+    #Logo-1 {
+        position: absolute;
+        top: 113px;
+        right: 150px;
+    }
+    
+    #Task_Treetitle-1 {
+        font-family: Roboto;
+        font-style: normal;
+        font-weight: 500;
+        font-size: 12px;
+        line-height: 14px;
+        text-align: center;
+        position: absolute;
+        top:   237px;
+        left: 70px;
+        color: #979797;
+    }
+
+    #Task_Title-2  {
+        font-family: Roboto;
+        font-style: normal;
+        font-weight: bold;
+        font-size: 16px;
+        line-height: 19px;
+        color: #000000 !important;
+        position: absolute;
+        top: 200px;
+        left: 70px;
+    }
+    
+    #Task_Subtitle-2  {
+        font-family: Roboto;
+        font-style: normal;
+        font-weight: 500;
+        font-size: 12px;
+        line-height: 14px;
+        text-align: center;
+        position: absolute;
+        top: 250px;
+        left: 70px;
+        color: #979797;
+    }
+    
+    
+    #Meta_Progress-2 {
+    width: 222px;
+    height: 17px;
+    left: 84px;
+    top: 189px;
+    position: absolute;
+    top: 285px;
+    left: 70px;
+    background: rgba(0, 0, 0, 0.12);
+    border-radius: 60px;
+    }
+    
+    
+    
+    #activite-2 {  
+    font-family: Roboto;
+    font-style: normal;
+    font-weight: 500;
+    font-size: 12px;
+    line-height: 14px;
+    text-align: center;
+    position: absolute;
+    top: 286px;
+    left: 300px;
+    
+    color: #979797;
+    }
+
+
+
+
+
+
+
+
+
+.placeholder {
+    width: 100%;
+    height: 241px;
+    background-color: #000;;
+}
+
+.left-btn {
+    position: absolute;
+    width: 182px;
+    height: 31px;
+    left: 0px;
+    top: 356px;
+    background: #000000;
+    border: 1px solid #279F6D;
+    box-sizing: border-box;
+    box-shadow: 0px 4px 4px rgba(0, 0, 0, 0.25);
+    color:#fff;
+    font-size: 9px;
+}
+.txt-left {
+    min-width: 15px;
+
+}
+
+.txt-right {
+
+}
+
+.right-btn {
+    position: absolute;
+    width: 179px;
+    height: 31px;
+    left: 181px;
+    top: 356px;
+    
+    background: #000000;
+    border: 1px solid #279F6D;
+    box-sizing: border-box;
+    box-shadow: 0px 4px 4px rgba(0, 0, 0, 0.25);
+    color:#fff;
+    font-size: 9px;
 }
 
